--- a/app/views/prospects/new.html.erb
+++ b/app/views/prospects/new.html.erb
@@ -23,7 +23,7 @@
 				<div class="row">
 					<div class="col-md-4"><%= f.input :phone %></div>
 					<div class="col-md-4"><%= f.input :website %></div>
-					<div class="col-md-4"><%= f.input :employees, required: true, label: "Employees" %></div>
+					<div class="col-md-4"><%= f.input :employees %></div>
 				</div>
 			
 				<hr>
