--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,11 +11,11 @@
 	  		<div class="col-md-4">
       		<%= form_tag(users_path, :method => "get", id: "search-form") do %>
       			<%= text_field_tag :search, params[:search], placeholder: "Search Users" %>
-      			<%= submit_tag "Search", class:"btn btn-slate btn-sm" %>
+      			<%= submit_tag "Search", class:"btn btn-slate btn-xs" %>
       		<% end %>
 	  		</div>
 	  		<div class="col-md-2 pull-right">
-					<%= link_to "Download CSV", users_path(format: "csv"), class: "btn btn-beige btn-sm" %>
+					<%= link_to "Download CSV", users_path(format: "csv"), class: "btn btn-beige btn-xs" %>
 	  		</div>
 	  	</div>
 	  </div>
