--- a/app/views/prospects/_cps_show.html.erb
+++ b/app/views/prospects/_cps_show.html.erb
@@ -79,10 +79,10 @@
 
   		<div class="row">
   		  <div class="col-md-4 col-md-offset-4">
-      		<%= simple_form_for @prospect, url: hcs_update_path, method: :post do |f| %>
+      		<%= simple_form_for @prospect, url: cps_update_path, method: :post do |f| %>
       			<%= f.hidden_field :cps_prospect, value: 'false' %>
             <%= f.submit "Remove Commercial Payments Service", class:"btn btn-sm btn-block btn-danger" %>
-          <% end %>            
+          <% end %>
         </div>
       </div>    
 
