--- a/app/views/prospects/show.html.erb
+++ b/app/views/prospects/show.html.erb
@@ -27,7 +27,7 @@
   	
     <div class="row">
       <div class="col-md-6">
-        &nbsp; Address: <em><%= @prospect.street_address %></em><br>
+        Address: &nbsp;<em><%= @prospect.street_address %></em><br>
         Address2: <em><%= @prospect.address2 %></em><br>
       	CityStZip: <em><%= @prospect.city %>, <%= @prospect.state %> <%= @prospect.zip %></em>
       </div>
