--- a/app/views/pages/training.html.erb
+++ b/app/views/pages/training.html.erb
@@ -55,6 +55,14 @@
 
   <div class="col-md-6">
     <div class="embed-responsive embed-responsive-16by9 clearfix">
+      <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/355374452" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+    <p>&nbsp;</p>
+  </div> 
+
+
+  <div class="col-md-6">
+    <div class="embed-responsive embed-responsive-16by9 clearfix">
       <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/353994960" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <p>&nbsp;</p>
