add video and brochures

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,7 +41,10 @@
       <h4><strong>Sales Tools</strong></h3>
       <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
       <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
+      <li><a href="http://aspirepartners.co/crm_docs/About_Priority_CPX.pdf" target="_New">About Priority CPX BROCHURE</a></li>
+      <li><a href="http://aspirepartners.co/crm_docs/Turn_Expense_into_Revenue.pdf" target="_New">Turn Expense into Revenue BROCHURE</a></li>
       <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
+      <li><a href="http://aspirepartners.co/crm_docs/Break-Into-the_C-Suite.pdf" target="_New">Break Into the C-Suite - GUIDE from Outreach</a></li>      
     </div>
     
     <div class="col-md-5">
