--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,7 +37,6 @@
   
   <div class="row">
     <div class="col-md-5 col-md-offset-1">
-
       <h4><strong>Sales Tools</strong></h3>
       <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
       <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
@@ -46,15 +45,26 @@
       <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
       <li><a href="http://aspirepartners.co/crm_docs/Break-Into-the_C-Suite.pdf" target="_New">Break Into the C-Suite - GUIDE from Outreach</a></li>      
     </div>
-    
     <div class="col-md-5">
       <h4><strong>Schedule Presentation</strong></h4>
       Schedule a presentation for your client with an expert at Priority Commercial Payments:
         <%= render html: calendly_link.html_safe %>
     </div>
-  
   </div>
+
+  <p>&nbsp;</p>
   
+  <div class="row">
+    <div class="col-md-5 col-md-offset-1">
+      <h4><strong>News Articles</strong></h3>
+      <li><a href="https://www.forbes.com/sites/agoodman/2017/03/07/new-virtual-credit-cards-for-businesses-eliminating-the-need-for-checks" target="_New">Virtual Cards Eliminating Need for Checks</a></li>
+    </div>
+    <div class="col-md-5">
+      <h4><strong>  </strong></h4>
+      
+    </div>
+  </div>
+
   <p>&nbsp;</p>
   
   <div class="row">
