--- a/app/views/pages/training.html.erb
+++ b/app/views/pages/training.html.erb
@@ -104,6 +104,13 @@
     <p>&nbsp;</p>
   </div> 
 
+  <div class="col-md-6">
+    <div class="embed-responsive embed-responsive-16by9 clearfix">
+      <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/359421552" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+    <p>&nbsp;</p>
+  </div> 
+
   <p>&nbsp;</p>
 
 </div>
