--- a/app/views/pages/training.html.erb
+++ b/app/views/pages/training.html.erb
@@ -1,10 +1,4 @@
 <div class="container pages">
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      <p><em>Updated on 8/15/19 - Watch for updates</em></p>
-      <p>&nbsp;</p>
-    </div>
-  </div>
 
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
@@ -111,6 +105,13 @@
     <p>&nbsp;</p>
   </div> 
 
+  <div class="col-md-6">
+    <div class="embed-responsive embed-responsive-16by9 clearfix">
+      <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/361043862" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+    <p>&nbsp;</p>
+  </div> 
+  
   <p>&nbsp;</p>
 
 </div>
