--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
       <div class="license-agreement">
         <p align="center"><strong>AGENT AGREEMENT</strong></p>
         
-        <p align="justify">THIS INDEPENDENT AGENT AGREEMENT (the “Agreement”) is entered into effective as of this day (the “Effective Date”) by and between HAC Enterprises LLC, doing business as Aspire Partners herein referred to as “ASPIRE", and Contractor, herein referred to as “AGENT”.&nbsp; ASPIRE and AGENT shall be referred to individually as a “Party” or collectively as the “Parties”.</p>
+        <p align="justify">THIS INDEPENDENT AGENT AGREEMENT (the “Agreement”) is entered into effective as of this day (the “Effective Date”) by and between HAC Enterprises GA, LLC, doing business as Aspire Partners herein referred to as “ASPIRE", and Contractor, herein referred to as “AGENT”.&nbsp; ASPIRE and AGENT shall be referred to individually as a “Party” or collectively as the “Parties”.</p>
         
         <p align="justify">WHEREAS, AGENT desires to refer organizations (“End Users”) that will utilize the services sold by Aspire. A “referral” is where AGENT, at a minimum, coordinates the initial sales meeting and personally introduces the potential End Users to Aspire after having familiarized the Services to the same potential End User beforehand.&nbsp; ASPIRE and its partners shall verify that the&nbsp; referred organization has not otherwise been referred, and is eligible to become a referral of AGENT, which Aspire and its partners shall have complete and final determination; and</p>
         
