--- a/app/views/pages/training.html.erb
+++ b/app/views/pages/training.html.erb
@@ -124,8 +124,15 @@
       <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/364045841" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <p>&nbsp;</p>
+  </div>
+  
+  <div class="col-md-6">
+    <div class="embed-responsive embed-responsive-16by9 clearfix">
+      <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/365574966" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+    <p>&nbsp;</p>
   </div>   
-
+  
   <p>&nbsp;</p>
 
 </div>
