--- a/app/views/pages/articles.html.erb
+++ b/app/views/pages/articles.html.erb
@@ -5,7 +5,7 @@
       <h3>Articles</h3>
       <ul>
         <li><a href="https://www.forbes.com/sites/agoodman/2017/03/07/new-virtual-credit-cards-for-businesses-eliminating-the-need-for-checks" target="_blank">New Virtual Credit Cards For Businesses Eliminating The Need For Checks</a> <em>- Forbes</em></li>
-        <li><a href="https://www.kontrolpayables.com/blog/electronic-payments-101-the-basics-on-ap-automation-0" target="_blank">The Basics of Virtual Card Payments Technology</a>&nbsp;<em>- Kontrol</em></li>
+        <li><a href="https://prioritycommercialpayments.com/priority-commercial-payments-wins-afp-treasury-and-finance-conference-payments-hub-challenge/" target="_blank">Priority Commercial Payments Wins AFP Treasury and Finance Conference Payments Hub Challenge</a>&nbsp;<em>- Priority</em></li>
       </ul>
     </div>
   </div>
