--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,12 @@
 <div class="container pages">
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      <p><em>Updated on 8/15/19 - Watch for updates</em></p>
-      <p>&nbsp;</p>
-    </div>
-  </div>
+  <!--<div class="row">-->
+  <!--  <div class="col-md-10 col-md-offset-1">-->
+  <!--    <p><em>Updated on 8/15/19 - Watch for updates</em></p>-->
+  <!--    <p>&nbsp;</p>-->
+  <!--  </div>-->
+  <!--</div>-->
+  
+  <p>&nbsp;</p>
   
   <div class="row">
     <div class="col-md-5 col-md-offset-1">
