--- a/app/views/pages/marketing.html.erb
+++ b/app/views/pages/marketing.html.erb
@@ -27,11 +27,11 @@
   <!--      </ul>        -->
   <!--    </div>-->
   <!--  </div>-->
+  <!--<p>&nbsp;</p>-->
   <!--<%# end %>-->
 
   <div class="row">
     <div class="col-md-8 col-md-offset-1">
-      <p>&nbsp;</p>
       <h4><strong>Marketing Videos</strong></h4>
     </div>
   </div>
